# UTAULARIA

./: .gitignore  Cargo.toml  LICENSE  cargo_error.txt  errors.txt  progresso.md  readme.md
src/: app.rs  io.rs  main.rs  voicebank.rs
voicebank_assets/VIICTOR/: config.txt
